# rules_tailwind

./: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  cli.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.bzl
example/: BUILD.bazel  build.bazel  index.html  tailwind.config.js
