load("//:tailwind.bzl", "tailwind_runner")

filegroup(
    name = "html_files",
    srcs = glob(["*.html"]),
)

dep_data = [
    "//example:html_files",
]

tailwind_runner(
    runner_name = "style",
    css = "//example:main.css",
    cfg = "//example:tailwind.config.js",
    out = "index.css",
    data = dep_data,
)
