load("//:tailwind.bzl", "tailwind_run", "tailwind_runner")

name = "style"

runner_name = "%s.tailwindcss_runner" % name

tailwind_runner(
    out = "index.css",
    cfg = "//example:tailwind.config.js",
    css = "//example:main.css",
    runner_name = runner_name,
)

tailwind_run(
    name = name,
    out = "index.css",
    cfg = "//example:tailwind.config.js",
    css = "//example:main.css",
    runner = runner_name,
    visibility = ["//visibility:public"],
)
